feat: add necessary packages from requirements.txt

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,14 @@ pandas = "^1.2.4"
 opencv-python = "^4.5.2"
 matplotlib = "^3.4.2"
 seaborn = "^0.11.1"
+Pillow = "^8.2.0"
+PyYAML = "^5.4.1"
+scipy = "^1.6.3"
+tqdm = "^4.60.0"
+tensorboard = "2.4.1"
 
 [tool.poetry.dev-dependencies]
 black = "^21.5b1"
 pylint = "^2.8.2"
+selenium = "^3.141.0"
+labelImg = "^1.8.5"
